SampleData making changes

--- a/SampleData-Excel-CSV.ipynb
+++ b/SampleData-Excel-CSV.ipynb
@@ -13,12 +13,12 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 2,
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd\n",
                 "# Used to get the current date/time\n",
-                "from datetime import datetime\n",
+                "from datetime import datetime, timedelta\n",
                 "# Used to generate a random number\n",
                 "import random"
             ],
@@ -38,27 +38,28 @@
             "source": [
                 "# Create DataFrame from scatch and populate it with test data\n",
                 "df_sampledata = pd.DataFrame(columns=['TEST_DATETIME', 'TEST_NUMBER', 'TEST_TEXT', 'RECORD_ADDED'], index=['record_a', 'record_b', 'record_c', 'record_d'])\n",
-                "# Get the current date/time\n",
+                "# Get the current date/time and the last 2 days and put them in a list\n",
+                "dates_to_add = list([])\n",
+                "two_days_ago = (datetime.now() - timedelta(days=2)).strftime(\"%Y/%m/%d %H:%M:%S\")\n",
+                "two_days_ago_text = (datetime.now() - timedelta(days=2)).strftime(\"%B %d of %Y\")\n",
+                "dates_to_add.append(dict({\"datetime\": two_days_ago, \"datetext\": two_days_ago_text}))\n",
+                "yesterday_was = (datetime.now() - timedelta(days=1)).strftime(\"%Y/%m/%d %H:%M:%S\")\n",
+                "yesterday_was_text = (datetime.now() - timedelta(days=1)).strftime(\"%B %d of %Y\")\n",
+                "dates_to_add.append(dict({\"datetime\": yesterday_was, \"datetext\": yesterday_was_text}))\n",
                 "now_is = datetime.now().strftime(\"%Y/%m/%d %H:%M:%S\")\n",
                 "now_is_text = datetime.now().strftime(\"%B %d of %Y\")\n",
-                "# Assemble some text\n",
-                "text_is = \"Record added \" + now_is_text\n",
-                "# Get a random number with 6 digits\n",
-                "number_is = random.randint(100000, 1000000)\n",
-                "# Populate some data\n",
-                "df_sampledata.loc['record_a'] = pd.Series({'TEST_DATETIME': now_is, 'TEST_NUMBER': number_is, 'TEST_TEXT': text_is, 'RECORD_ADDED': now_is})\n",
-                "# Get a random number with 6 digits\n",
-                "number_is = random.randint(100000, 1000000)\n",
-                "# Populate some data\n",
-                "df_sampledata.loc['record_b'] = pd.Series({'TEST_DATETIME': now_is, 'TEST_NUMBER': number_is, 'TEST_TEXT': text_is, 'RECORD_ADDED': now_is})\n",
-                "# Get a random number with 6 digits\n",
-                "number_is = random.randint(100000, 1000000)\n",
-                "# Populate some data\n",
-                "df_sampledata.loc['record_c'] = pd.Series({'TEST_DATETIME': now_is, 'TEST_NUMBER': number_is, 'TEST_TEXT': text_is, 'RECORD_ADDED': now_is})\n",
-                "# Get a random number with 6 digits\n",
-                "number_is = random.randint(100000, 1000000)\n",
-                "# Populate some data\n",
-                "df_sampledata.loc['record_d'] = pd.Series({'TEST_DATETIME': now_is, 'TEST_NUMBER': number_is, 'TEST_TEXT': text_is, 'RECORD_ADDED': now_is})\n",
+                "dates_to_add.append(dict({\"datetime\": now_is, \"datetext\": now_is_text}))\n",
+                "# Loop through each day and add some records\n",
+                "for date_to_add in dates_to_add:\n",
+                "    # Date and text to use\n",
+                "    date_is = date_to_add['datetime']\n",
+                "    text_is = \"Record added \" + date_to_add['datetext']\n",
+                "    # Add four records for each date\n",
+                "    for records_to_add in range(4):\n",
+                "        # Get a random number with 6 digits\n",
+                "        number_is = random.randint(100000, 1000000)\n",
+                "        # Populate some data\n",
+                "        df_sampledata = df_sampledata.append(pd.Series({'TEST_DATETIME': date_is, 'TEST_NUMBER': number_is, 'TEST_TEXT': text_is, 'RECORD_ADDED': date_is}), ignore_index=True)\n",
                 "# View new DataFrame\n",
                 "df_sampledata"
             ],
@@ -67,17 +68,41 @@
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "                TEST_DATETIME TEST_NUMBER                       TEST_TEXT  \\\n",
-                            "record_a  2021/08/26 13:51:11      556971  Record added August 26 of 2021   \n",
-                            "record_b  2021/08/26 13:51:11      800959  Record added August 26 of 2021   \n",
-                            "record_c  2021/08/26 13:51:11      225239  Record added August 26 of 2021   \n",
-                            "record_d  2021/08/26 13:51:11      199915  Record added August 26 of 2021   \n",
+                            "          TEST_DATETIME TEST_NUMBER                       TEST_TEXT  \\\n",
+                            "0                   NaN         NaN                             NaN   \n",
+                            "1                   NaN         NaN                             NaN   \n",
+                            "2                   NaN         NaN                             NaN   \n",
+                            "3                   NaN         NaN                             NaN   \n",
+                            "4   2021/08/24 16:52:16      611307  Record added August 24 of 2021   \n",
+                            "5   2021/08/24 16:52:16      271110  Record added August 24 of 2021   \n",
+                            "6   2021/08/24 16:52:16      681893  Record added August 24 of 2021   \n",
+                            "7   2021/08/24 16:52:16      346079  Record added August 24 of 2021   \n",
+                            "8   2021/08/25 16:52:16      572407  Record added August 25 of 2021   \n",
+                            "9   2021/08/25 16:52:16      130332  Record added August 25 of 2021   \n",
+                            "10  2021/08/25 16:52:16      748187  Record added August 25 of 2021   \n",
+                            "11  2021/08/25 16:52:16      879078  Record added August 25 of 2021   \n",
+                            "12  2021/08/26 16:52:16      272686  Record added August 26 of 2021   \n",
+                            "13  2021/08/26 16:52:16      787605  Record added August 26 of 2021   \n",
+                            "14  2021/08/26 16:52:16      551367  Record added August 26 of 2021   \n",
+                            "15  2021/08/26 16:52:16      356276  Record added August 26 of 2021   \n",
                             "\n",
-                            "                 RECORD_ADDED  \n",
-                            "record_a  2021/08/26 13:51:11  \n",
-                            "record_b  2021/08/26 13:51:11  \n",
-                            "record_c  2021/08/26 13:51:11  \n",
-                            "record_d  2021/08/26 13:51:11  "
+                            "           RECORD_ADDED  \n",
+                            "0                   NaN  \n",
+                            "1                   NaN  \n",
+                            "2                   NaN  \n",
+                            "3                   NaN  \n",
+                            "4   2021/08/24 16:52:16  \n",
+                            "5   2021/08/24 16:52:16  \n",
+                            "6   2021/08/24 16:52:16  \n",
+                            "7   2021/08/24 16:52:16  \n",
+                            "8   2021/08/25 16:52:16  \n",
+                            "9   2021/08/25 16:52:16  \n",
+                            "10  2021/08/25 16:52:16  \n",
+                            "11  2021/08/25 16:52:16  \n",
+                            "12  2021/08/26 16:52:16  \n",
+                            "13  2021/08/26 16:52:16  \n",
+                            "14  2021/08/26 16:52:16  \n",
+                            "15  2021/08/26 16:52:16  "
                         ],
                         "text/html": [
                             "<div>\n",
@@ -106,32 +131,116 @@
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
-                            "      <th>record_a</th>\n",
-                            "      <td>2021/08/26 13:51:11</td>\n",
-                            "      <td>556971</td>\n",
-                            "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "      <th>0</th>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
-                            "      <th>record_b</th>\n",
-                            "      <td>2021/08/26 13:51:11</td>\n",
-                            "      <td>800959</td>\n",
-                            "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "      <th>1</th>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
-                            "      <th>record_c</th>\n",
-                            "      <td>2021/08/26 13:51:11</td>\n",
-                            "      <td>225239</td>\n",
-                            "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "      <th>2</th>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
-                            "      <th>record_d</th>\n",
-                            "      <td>2021/08/26 13:51:11</td>\n",
-                            "      <td>199915</td>\n",
+                            "      <th>3</th>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "      <td>NaN</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>4</th>\n",
+                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "      <td>611307</td>\n",
+                            "      <td>Record added August 24 of 2021</td>\n",
+                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>5</th>\n",
+                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "      <td>271110</td>\n",
+                            "      <td>Record added August 24 of 2021</td>\n",
+                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>6</th>\n",
+                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "      <td>681893</td>\n",
+                            "      <td>Record added August 24 of 2021</td>\n",
+                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>7</th>\n",
+                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "      <td>346079</td>\n",
+                            "      <td>Record added August 24 of 2021</td>\n",
+                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>8</th>\n",
+                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "      <td>572407</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>9</th>\n",
+                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "      <td>130332</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>10</th>\n",
+                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "      <td>748187</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>11</th>\n",
+                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "      <td>879078</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>12</th>\n",
+                            "      <td>2021/08/26 16:52:16</td>\n",
+                            "      <td>272686</td>\n",
                             "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 13:51:11</td>\n",
+                            "      <td>2021/08/26 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>13</th>\n",
+                            "      <td>2021/08/26 16:52:16</td>\n",
+                            "      <td>787605</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>14</th>\n",
+                            "      <td>2021/08/26 16:52:16</td>\n",
+                            "      <td>551367</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 16:52:16</td>\n",
+                            "    </tr>\n",
+                            "    <tr>\n",
+                            "      <th>15</th>\n",
+                            "      <td>2021/08/26 16:52:16</td>\n",
+                            "      <td>356276</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 16:52:16</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
