Sample data updated to add more data

--- a/SampleData-Excel-CSV.ipynb
+++ b/SampleData-Excel-CSV.ipynb
@@ -13,7 +13,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 1,
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd\n",
@@ -34,10 +34,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 10,
             "source": [
                 "# Create DataFrame from scatch and populate it with test data\n",
-                "df_sampledata = pd.DataFrame(columns=['TEST_DATETIME', 'TEST_NUMBER', 'TEST_TEXT', 'RECORD_ADDED'], index=['record_a', 'record_b', 'record_c', 'record_d'])\n",
+                "df_sampledata = pd.DataFrame(columns=['TEST_DATETIME', 'TEST_NUMBER', 'TEST_TEXT', 'RECORD_ADDED'])\n",
                 "# Get the current date/time and the last 2 days and put them in a list\n",
                 "dates_to_add = list([])\n",
                 "two_days_ago = (datetime.now() - timedelta(days=2)).strftime(\"%Y/%m/%d %H:%M:%S\")\n",
@@ -50,12 +50,13 @@
                 "now_is_text = datetime.now().strftime(\"%B %d of %Y\")\n",
                 "dates_to_add.append(dict({\"datetime\": now_is, \"datetext\": now_is_text}))\n",
                 "# Loop through each day and add some records\n",
+                "records_per_date = int(4)\n",
                 "for date_to_add in dates_to_add:\n",
                 "    # Date and text to use\n",
                 "    date_is = date_to_add['datetime']\n",
                 "    text_is = \"Record added \" + date_to_add['datetext']\n",
                 "    # Add four records for each date\n",
-                "    for records_to_add in range(4):\n",
+                "    for records_to_add in range(records_per_date):\n",
                 "        # Get a random number with 6 digits\n",
                 "        number_is = random.randint(100000, 1000000)\n",
                 "        # Populate some data\n",
@@ -69,40 +70,32 @@
                     "data": {
                         "text/plain": [
                             "          TEST_DATETIME TEST_NUMBER                       TEST_TEXT  \\\n",
-                            "0                   NaN         NaN                             NaN   \n",
-                            "1                   NaN         NaN                             NaN   \n",
-                            "2                   NaN         NaN                             NaN   \n",
-                            "3                   NaN         NaN                             NaN   \n",
-                            "4   2021/08/24 16:52:16      611307  Record added August 24 of 2021   \n",
-                            "5   2021/08/24 16:52:16      271110  Record added August 24 of 2021   \n",
-                            "6   2021/08/24 16:52:16      681893  Record added August 24 of 2021   \n",
-                            "7   2021/08/24 16:52:16      346079  Record added August 24 of 2021   \n",
-                            "8   2021/08/25 16:52:16      572407  Record added August 25 of 2021   \n",
-                            "9   2021/08/25 16:52:16      130332  Record added August 25 of 2021   \n",
-                            "10  2021/08/25 16:52:16      748187  Record added August 25 of 2021   \n",
-                            "11  2021/08/25 16:52:16      879078  Record added August 25 of 2021   \n",
-                            "12  2021/08/26 16:52:16      272686  Record added August 26 of 2021   \n",
-                            "13  2021/08/26 16:52:16      787605  Record added August 26 of 2021   \n",
-                            "14  2021/08/26 16:52:16      551367  Record added August 26 of 2021   \n",
-                            "15  2021/08/26 16:52:16      356276  Record added August 26 of 2021   \n",
+                            "0   2021/08/25 08:04:43      961305  Record added August 25 of 2021   \n",
+                            "1   2021/08/25 08:04:43      455012  Record added August 25 of 2021   \n",
+                            "2   2021/08/25 08:04:43      541831  Record added August 25 of 2021   \n",
+                            "3   2021/08/25 08:04:43      220394  Record added August 25 of 2021   \n",
+                            "4   2021/08/26 08:04:43      156123  Record added August 26 of 2021   \n",
+                            "5   2021/08/26 08:04:43      528509  Record added August 26 of 2021   \n",
+                            "6   2021/08/26 08:04:43      917142  Record added August 26 of 2021   \n",
+                            "7   2021/08/26 08:04:43      227210  Record added August 26 of 2021   \n",
+                            "8   2021/08/27 08:04:43      988481  Record added August 27 of 2021   \n",
+                            "9   2021/08/27 08:04:43      771113  Record added August 27 of 2021   \n",
+                            "10  2021/08/27 08:04:43      174643  Record added August 27 of 2021   \n",
+                            "11  2021/08/27 08:04:43      452992  Record added August 27 of 2021   \n",
                             "\n",
                             "           RECORD_ADDED  \n",
-                            "0                   NaN  \n",
-                            "1                   NaN  \n",
-                            "2                   NaN  \n",
-                            "3                   NaN  \n",
-                            "4   2021/08/24 16:52:16  \n",
-                            "5   2021/08/24 16:52:16  \n",
-                            "6   2021/08/24 16:52:16  \n",
-                            "7   2021/08/24 16:52:16  \n",
-                            "8   2021/08/25 16:52:16  \n",
-                            "9   2021/08/25 16:52:16  \n",
-                            "10  2021/08/25 16:52:16  \n",
-                            "11  2021/08/25 16:52:16  \n",
-                            "12  2021/08/26 16:52:16  \n",
-                            "13  2021/08/26 16:52:16  \n",
-                            "14  2021/08/26 16:52:16  \n",
-                            "15  2021/08/26 16:52:16  "
+                            "0   2021/08/25 08:04:43  \n",
+                            "1   2021/08/25 08:04:43  \n",
+                            "2   2021/08/25 08:04:43  \n",
+                            "3   2021/08/25 08:04:43  \n",
+                            "4   2021/08/26 08:04:43  \n",
+                            "5   2021/08/26 08:04:43  \n",
+                            "6   2021/08/26 08:04:43  \n",
+                            "7   2021/08/26 08:04:43  \n",
+                            "8   2021/08/27 08:04:43  \n",
+                            "9   2021/08/27 08:04:43  \n",
+                            "10  2021/08/27 08:04:43  \n",
+                            "11  2021/08/27 08:04:43  "
                         ],
                         "text/html": [
                             "<div>\n",
@@ -132,115 +125,87 @@
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>2021/08/25 08:04:43</td>\n",
+                            "      <td>961305</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>2021/08/25 08:04:43</td>\n",
+                            "      <td>455012</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>2021/08/25 08:04:43</td>\n",
+                            "      <td>541831</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
-                            "      <td>NaN</td>\n",
+                            "      <td>2021/08/25 08:04:43</td>\n",
+                            "      <td>220394</td>\n",
+                            "      <td>Record added August 25 of 2021</td>\n",
+                            "      <td>2021/08/25 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>4</th>\n",
-                            "      <td>2021/08/24 16:52:16</td>\n",
-                            "      <td>611307</td>\n",
-                            "      <td>Record added August 24 of 2021</td>\n",
-                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "      <td>2021/08/26 08:04:43</td>\n",
+                            "      <td>156123</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>5</th>\n",
-                            "      <td>2021/08/24 16:52:16</td>\n",
-                            "      <td>271110</td>\n",
-                            "      <td>Record added August 24 of 2021</td>\n",
-                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "      <td>2021/08/26 08:04:43</td>\n",
+                            "      <td>528509</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>6</th>\n",
-                            "      <td>2021/08/24 16:52:16</td>\n",
-                            "      <td>681893</td>\n",
-                            "      <td>Record added August 24 of 2021</td>\n",
-                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "      <td>2021/08/26 08:04:43</td>\n",
+                            "      <td>917142</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>7</th>\n",
-                            "      <td>2021/08/24 16:52:16</td>\n",
-                            "      <td>346079</td>\n",
-                            "      <td>Record added August 24 of 2021</td>\n",
-                            "      <td>2021/08/24 16:52:16</td>\n",
+                            "      <td>2021/08/26 08:04:43</td>\n",
+                            "      <td>227210</td>\n",
+                            "      <td>Record added August 26 of 2021</td>\n",
+                            "      <td>2021/08/26 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>8</th>\n",
-                            "      <td>2021/08/25 16:52:16</td>\n",
-                            "      <td>572407</td>\n",
-                            "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "      <td>2021/08/27 08:04:43</td>\n",
+                            "      <td>988481</td>\n",
+                            "      <td>Record added August 27 of 2021</td>\n",
+                            "      <td>2021/08/27 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>9</th>\n",
-                            "      <td>2021/08/25 16:52:16</td>\n",
-                            "      <td>130332</td>\n",
-                            "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "      <td>2021/08/27 08:04:43</td>\n",
+                            "      <td>771113</td>\n",
+                            "      <td>Record added August 27 of 2021</td>\n",
+                            "      <td>2021/08/27 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>10</th>\n",
-                            "      <td>2021/08/25 16:52:16</td>\n",
-                            "      <td>748187</td>\n",
-                            "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 16:52:16</td>\n",
+                            "      <td>2021/08/27 08:04:43</td>\n",
+                            "      <td>174643</td>\n",
+                            "      <td>Record added August 27 of 2021</td>\n",
+                            "      <td>2021/08/27 08:04:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>11</th>\n",
-                            "      <td>2021/08/25 16:52:16</td>\n",
-                            "      <td>879078</td>\n",
-                            "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 16:52:16</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>12</th>\n",
-                            "      <td>2021/08/26 16:52:16</td>\n",
-                            "      <td>272686</td>\n",
-                            "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 16:52:16</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>13</th>\n",
-                            "      <td>2021/08/26 16:52:16</td>\n",
-                            "      <td>787605</td>\n",
-                            "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 16:52:16</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>14</th>\n",
-                            "      <td>2021/08/26 16:52:16</td>\n",
-                            "      <td>551367</td>\n",
-                            "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 16:52:16</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>15</th>\n",
-                            "      <td>2021/08/26 16:52:16</td>\n",
-                            "      <td>356276</td>\n",
-                            "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 16:52:16</td>\n",
+                            "      <td>2021/08/27 08:04:43</td>\n",
+                            "      <td>452992</td>\n",
+                            "      <td>Record added August 27 of 2021</td>\n",
+                            "      <td>2021/08/27 08:04:43</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -248,7 +213,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 3
+                    "execution_count": 10
                 }
             ],
             "metadata": {}
@@ -262,7 +227,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 11,
             "source": [
                 "# String to Date/Time\n",
                 "df_sampledata['TEST_DATETIME'] = pd.to_datetime(df_sampledata['TEST_DATETIME'])\n",
@@ -282,7 +247,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 12,
             "source": [
                 "# List DataFrame columns\n",
                 "df_sampledata.columns\n",
@@ -302,7 +267,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 5
+                    "execution_count": 12
                 }
             ],
             "metadata": {}
@@ -316,7 +281,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 13,
             "source": [
                 "# Send DataFrame to Excel file\n",
                 "df_sampledata.to_excel('testtable_source.xlsx', index=False)"
@@ -333,7 +298,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 14,
             "source": [
                 "# Send DataFrame to CSV file\n",
                 "df_sampledata.to_csv('testtable_source.csv', index=False)"
